--- a/Artes.css
+++ b/Artes.css
@@ -7,30 +7,40 @@
     src: url(src/fonts/graffiti_city/Graffiti\ City.otf);
     }
 
-
-
-header {
-    
-
-}
-
-img {
-   width: 100%;
-   position: absolute;
-}
+.backgroundimg {
+        
+        background-image: url(src/img/image\ 1\ \(1\).png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 500px;        
+    }
 
 .titulo {
-    position: absolute;
-    color: #FFF;
-    font-family:"Grafitte";
-    text-decoration: none;
-    font-size: 60px;
-    padding-top: 340px;
-    padding-left: 51px;
+        display: block;
+        font-family: Grafitte;
+        color:#FFF;
+        font-size: 70px;
+        text-decoration: none;
+        padding-left: 25px;
+        padding:370px 70px ;
+    }
 
-}
 nav {
-    display: flex;
-    background-color: #D9D8D0;
-    height: 91px
+        display: flex;
+        justify-content: center;
+        gap: 260px;
+        font-family: Grafitte;
+        
+        background: #D9D8D0;
+        height: 91px;
+        font-size: 50px;
+        align-items: center;
+    }
+
+nav > a {
+    color: #000;
+    text-decoration: none;
 }
+
+
+
