--- a/Artes.css
+++ b/Artes.css
@@ -7,6 +7,10 @@
     src: url(src/fonts/graffiti_city/Graffiti\ City.otf);
     }
 
+    body {
+        background-color: #000;
+    }
+
 .backgroundimg {
         
         background-image: url(src/img/image\ 1\ \(1\).png);
@@ -29,8 +33,7 @@ nav {
         display: flex;
         justify-content: center;
         gap: 260px;
-        font-family: Grafitte;
-        
+        font-family: Grafitte;       
         background: #D9D8D0;
         height: 91px;
         font-size: 50px;
@@ -41,6 +44,50 @@ nav > a {
     color: #000;
     text-decoration: none;
 }
+
+
+img {
+    width: 50%;
+    height: 862px;
+    padding-left: 200px;
+}
+
+h3 {
+    float: right;
+    font-size: 30px;
+    padding-right: 90px;
+    padding-left: 53px;
+    padding-top: 53px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FFF;
+}
+
+.pt2 {
+    padding-top: 81px;
+    padding-left: 52px;
+}
+
+.exposicoes {
+    width: 1400px;
+    
+}
+
+.exposicaolixomania {
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+
+}
+.LixoMania {
+    padding-top:72px ;
+}
+
+
+
+
+
 
 
 
