--- a/Artes.css
+++ b/Artes.css
@@ -84,6 +84,18 @@ h3 {
     padding-top:72px ;
 }
 
+.pt3 {
+    font-size: 26px;
+    margin-top: px;
+}
+
+.img10 {
+    width: 568px;
+    height: 710px;
+    float: right;
+    padding: 55px;
+    margin-top: 500px;
+}
 
 
 
