--- a/Artes.css
+++ b/Artes.css
@@ -96,8 +96,48 @@ h3 {
 .pt4 {
     font-size: 40px;
     padding-top: 100px;
+    padding-left: 450px;
 }
 
+.img10 {
+    width: 690px;
+    height: 868px;
+    padding-top: 80px;
+    padding-right: 100px;
+}
+
+.itautittle {
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    padding-top: 70px;
+}
+
+.itauimg {
+    width: 682px;
+    height: 475px;
+    padding-left: px;
+}
+
+.itauimg2 {
+    width: 690px;
+    height: 484px;
+    padding-top: 165px;
+
+}
+
+.itau {
+    display: flex;
+    padding-top: 57px;
+}
+
+.itautext {
+    padding-right:300px;
+    font-size: 33px;
+   
+}
 
 
 
