--- a/index.css
+++ b/index.css
@@ -1,182 +1,175 @@
 * {
-    margin: 0; padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-
-    body {
-        background-color: #000;
-    }
+body {
+  background-color: #000;
+}
 
 .backgroundimg {
-        
-        background-image: url(src/img/image\ 1\ \(1\).png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 500px;        
-    }
-
-.titulo {
-        display: block;
-        font-family: Grafitte;
-        font-size: 70px;
-        text-decoration: none;
-        padding-left: 25px;
-        padding:370px 70px ;
-    }
-
-nav {
-        display: flex;
-        justify-content: center;
-        gap: 260px;
-        font-family: Grafitte;       
-        background: #D9D8D0;
-        height: 91px;
-        font-size: 50px;
-        align-items: center;
-    }
-
-    h1 {
-        color: #FFF;
-    }
-
-    a {
-        color: #FFF;
-        text-decoration: none;
-    
-    }
-
-nav > a {
-    color: #000;
-    text-decoration: none;
+  background-image: url("src/img/image\\1\\(1).png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
 }
 
+.titulo {
+  display: block;
+  font-family: Grafitte;
+  font-size: 70px;
+  text-decoration: none;
+  padding-left: 25px;
+  padding: 370px 70px;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  gap: 260px;
+  font-family: Grafitte;
+  background: #d9d8d0;
+  height: 91px;
+  font-size: 50px;
+  align-items: center;
+}
+
+h1 {
+  color: #fff;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav > a {
+  color: #000;
+  text-decoration: none;
+}
 
 .pixo {
-    width: 50%;
-    height: 862px;
-    padding-left: 200px;
+  width: 50%;
+  height: 862px;
+  padding-left: 200px;
 }
 
 .pt1 {
-    float: right;
-    font-size: 30px;
-    padding-top: 53px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #FFF;
+  float: right;
+  font-size: 30px;
+  padding-top: 53px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
 }
 h3 {
-    font-size: 30px;
-    padding-right: 90px;
-    padding-left: 53px;
-    padding-top: 53px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #FFF;
+  font-size: 30px;
+  padding-right: 90px;
+  padding-left: 53px;
+  padding-top: 53px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
 }
 
 .pt2 {
-    padding-top: 81px;
-    padding-left: 52px;
+  padding-top: 81px;
+  padding-left: 52px;
 }
 
 .exposicoes {
-    width: 1300px;
-    padding-left: 30px;
+  width: 1300px;
+  padding-left: 30px;
 }
 
 .exposicaolixomania {
-    display: flex;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
-
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
 }
 .LixoMania {
-    padding-top:72px ;
-    padding-left: 200px;
+  padding-top: 72px;
+  padding-left: 200px;
 }
 
 .pt3 {
-    font-size: 40px;
-    padding-top: 100px;
+  font-size: 40px;
+  padding-top: 100px;
 }
 
 .formatImage {
-    display: flex;
+  display: flex;
 }
 
 .pt4 {
-    font-size: 40px;
-    padding-top: 100px;
-    padding-left: 450px;
+  font-size: 40px;
+  padding-top: 100px;
+  padding-left: 450px;
 }
 
 .img10 {
-    width: 690px;
-    height: 868px;
-    padding-top: 80px;
-    padding-right: 100px;
+  width: 690px;
+  height: 868px;
+  padding-top: 80px;
+  padding-right: 100px;
 }
 
 .itautittle {
-    display: flex;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
-    padding-top: 70px;
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  padding-top: 70px;
 }
 
 .itauimg {
-    padding-left: 250px;
-    width: 682px;
-    height: 475px;
+  padding-left: 250px;
+  width: 682px;
+  height: 475px;
 }
 
 .itauimg2 {
-    width: 690px;
-    height: 484px;
-    padding-top: 165px;
-
+  width: 690px;
+  height: 484px;
+  padding-top: 165px;
 }
 
 .itau {
-    display: flex;
-    padding-top: 57px;
-    gap: 30px;
+  display: flex;
+  padding-top: 57px;
+  gap: 30px;
 }
 
 .itautext {
-    padding-left: 230px;
-    font-size: 33px;
-    margin-top: 70px;
+  padding-left: 230px;
+  font-size: 33px;
+  margin-top: 70px;
 }
 
 footer {
-    border-top: solid;
-    height: 100px;
-    border-color: #FFF;
-    margin-top: 73px;
-    padding-top: 64px;
-    display: flex;
-    justify-content: center;
+  border-top: solid;
+  height: 100px;
+  border-color: #fff;
+  margin-top: 73px;
+  padding-top: 64px;
+  display: flex;
+  justify-content: center;
 }
 
 .icons {
-    padding-left:400px;
-    display: flex;
-    justify-content: center;  
-    height: 40px;
-    gap: 10px;
+  padding-left: 400px;
+  display: flex;
+  justify-content: center;
+  height: 40px;
+  gap: 10px;
 }
 
 .sobre {
-    display: flex;
-    justify-content: center;
-    color: #FFF;
-    padding-left: 300px;
-    gap: 153px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-    
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  padding-left: 300px;
+  gap: 153px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
 }
-
