--- a/src/pages/artistas.css
+++ b/src/pages/artistas.css
@@ -1,111 +1,107 @@
 * {
-    margin: 0; padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-
-    body {
-        background-color: #000;
-    }
+body {
+  background-color: #000;
+}
 
 .backgroundimg {
-        
-        background-image: url(src/img/image\ 1\ \(1\).png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 500px;        
-    }
+  background-image: url(src/img/image\1\\(1\).png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+}
 
 .titulo {
-        display: block;
-        font-family: Grafitte;
-        font-size: 70px;
-        text-decoration: none;
-        padding-left: 25px;
-        padding:370px 70px ;
-    }
+  display: block;
+  font-family: Grafitte;
+  font-size: 70px;
+  text-decoration: none;
+  padding-left: 25px;
+  padding: 370px 70px;
+}
 
 nav {
-        display: flex;
-        justify-content: center;
-        gap: 260px;
-        font-family: Grafitte;       
-        background: #D9D8D0;
-        height: 91px;
-        font-size: 50px;
-        align-items: center;
-    }
+  display: flex;
+  justify-content: center;
+  gap: 260px;
+  font-family: Grafitte;
+  background: #d9d8d0;
+  height: 91px;
+  font-size: 50px;
+  align-items: center;
+}
 
-    h1 {
-        color: #FFF;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+h1 {
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    h3 {
-        color: #FFF;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+h3 {
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    a {
-        color: #FFF;
-        text-decoration: none;
-    
-    }
+a {
+  color: #fff;
+  text-decoration: none;
+}
 
 nav > a {
-    color: #000;
-    text-decoration: none;
+  color: #000;
+  text-decoration: none;
 }
 
 .lixomaniapixo {
-    padding-left: 200px;
+  padding-left: 200px;
 }
 
 .description {
-    float: right;
-    padding-right: 150px;
-    font-family: Arial, Helvetica, sans-serif;
+  float: right;
+  padding-right: 150px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .titulolixomania {
-    font-size: 43px;
-    padding-left: 100px;
+  font-size: 43px;
+  padding-left: 100px;
 }
 .descriçaolixomania {
-    font-size: 40px;
-    padding-top: 30px;
+  font-size: 40px;
+  padding-top: 30px;
 }
 .lixomaniaart {
-    padding-top: 56px;
-    display: flex;
-    justify-content: center;
-    gap: 56px;
-
+  padding-top: 56px;
+  display: flex;
+  justify-content: center;
+  gap: 56px;
 }
 
 .img1 {
-    padding-top: 237px;
-    width: 700px;
-    height: 672px;
+  padding-top: 237px;
+  width: 700px;
+  height: 672px;
 }
 
 .img2 {
-    width: 617px;
-    height: 463px;
-    padding-right: 50px;
-
+  width: 617px;
+  height: 463px;
+  padding-right: 50px;
 }
 .coletivo {
-    font-family:sans-serif ;
-    font-size: 20px;
-    padding-left: 400px;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding-left: 400px;
 }
 
 .osgemeos {
-    padding-top: 322px;
-    padding-left: 350px;
-    gap: 60px;
+  padding-top: 322px;
+  padding-left: 350px;
+  gap: 60px;
 }
 
 .tittlegemeos {
-    padding-left: 500px;
+  padding-left: 500px;
 }
