--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,17 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: "Grafitte";
+  src: url(../src/fonts/graffiti_city/Graffiti\ City.otf);
+}
+
 body {
   background-color: #000;
 }
 
 .backgroundimg {
-  background-image: url("src/img/image\\1\\(1).png");
+  background-image: url(img/image\ 1\ \(1\).png);
   background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
@@ -102,8 +107,9 @@ h3 {
 
 .pt4 {
   font-size: 40px;
-  padding-top: 100px;
-  padding-left: 450px;
+  padding-top: 200px;
+  padding-left: 300px;
+  
 }
 
 .img10 {
